removed slick slider

--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-masonry-css": "^1.0.16",
-    "react-router-dom": "^6.6.1",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-router-dom": "^6.6.1"
+
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
