--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.6.1"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
